array of pending redraws may leak. r=smorgan, josh, b=360649